# EventOrganizerBot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: config.py  const.py  database.py  localization.py  main.py  models.py  scheduler.py  utils.py
app/locales/: __init__.py  en.json  event_ru.json  ru.json
app/services/: admin.py  events.py  messaging.py  posts.py  registrations.py  users.py
app/telebot/: admin_handlers.py  bot.py  common.py  db.py  handlers.py  user_handlers.py
app/telegram/: bot.py  handlers.py
app/web/: admin.py
templates/: base.html  dashboard.html  posts.html  registrations.html  registrations_list.html  urgent.html
tests/: conftest.py  test_admin.py  test_admin_service.py  test_config.py  test_database.py  test_db_helpers.py  test_events.py  test_handlers.py  test_handlers_flow.py  test_localization.py  test_main.py  test_messaging.py  test_posts.py  test_registrations.py  test_scheduler.py  test_services.py  test_telebot_bot.py  test_users.py  test_utils.py  test_web_admin.py
