[project]
name = "anonchatbot"
version = "0.1.0"
description = "Anonymous chat bot for community events"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Community" }
]
dependencies = [
  "apscheduler>=3.10",
  "fastapi>=0.125",
  "jinja2>=3.1",
  "pydantic>=1.10,<2",
  "python-multipart>=0.0.26",
  "python-telegram-bot>=20.7",
  "sqlalchemy>=2.0",
  "uvicorn>=0.29",
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "black>=24.4",
  "ruff>=0.4.2",
  "pytest>=9.0.3",
  "pytest-cov>=4.1",
  "python-multipart>=0.0.26",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
